Fixed some issues with index calculation.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</button>
 					
 					<!-- Plotter zoom button -->
-					<button onclick="?" class="btn_base btn_thins">
+					<button onclick="testWrite ()" class="btn_base btn_thins">
 						ZOOM
 					</button>
 					
