At last it calculates

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 					</button>
 					
 					<!-- Add button -->
-					<button onclick="addCommand (new token ('+', 1, add  ()))" class="btn_base btn_basic_ops">
+					<button onclick="addCommand (new token ('+', 1, add))" class="btn_base btn_basic_ops">
 						+
 					</button>
 				</div>
