Added nav bar + theme
Added navigation bar, with some minor changes, the this repo. Also
carried over the general website theme to this project.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,52 @@
         <script type="text/javascript" src="js/drawing.js"></script>
 	</head>
 	<body>
+        <!-- Navigation Bar -->
+        <ul>
+            <li>
+                <a href="https://mluzarow.github.io">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="https://mluzarow.github.io/blog/home.html">
+                    Blog
+                </a>
+            </li>
+            <li id="dropdown">
+                <a href="https://mluzarow.github.io/mods/mods.html" id="dropdown_btn">
+                    Mods
+                </a>
+                <div id="dropdown_content">
+                    <a href="https://mluzarow.github.io/mods/payday2.html">
+                        Payday 2
+                    </a>
+                    <a href="https://mluzarow.github.io/mods/stellaris.html">
+                        Stellaris
+                    </a>
+                </div>
+            </li>
+            <li id="dropdown">
+                <a href="https://mluzarow.github.io/apps/apps.html" id="dropdown_btn">
+                    Apps
+                </a>
+                <div id="dropdown_content">
+                    <a href="https://mluzarow.github.io/WebGraphingCalc">
+                        Graphing Calculator
+                    </a>
+                    <a href="https://mluzarow.github.io/crash-countdown">
+                        Crash Bandicoot Countdown
+                    </a>
+                </div>
+            </li>
+            <li>
+                <a href="https://mluzarow.github.io/about.html">
+                    About
+                </a>
+            </li>
+            
+        </ul>
+    
 		<!-- Calculator Frame -->
 		<div id="bg">
 			<!-- Spacer -->
