--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"> 
     <link rel="stylesheet" type="text/css" href="css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/navbar_z0.css">
     <script type="text/javascript" src="js/letters.js"></script>
     <script type="text/javascript" src="js/calculator.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
@@ -10,51 +11,56 @@
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <ul>
-        <li>
-            <a href="https://mluzarow.github.io">
-                Home
-            </a>
-        </li>
-        <li>
-            <a href="https://mluzarow.github.io/blog/home.html">
-                Blog
-            </a>
-        </li>
-        <li id="dropdown">
-            <a href="https://mluzarow.github.io/mods/mods.html" id="dropdown_btn">
-                Mods
-            </a>
-            <div id="dropdown_content">
-                <a href="https://mluzarow.github.io/mods/payday2.html">
-                    Payday 2
-                </a>
-                <a href="https://mluzarow.github.io/mods/stellaris.html">
-                    Stellaris
-                </a>
+    <!-- Navbar new -->
+    <div id="nb_frame">
+        <a id="logo" href="https://mluzarow.github.io">
+            m <div>
+                <span>{luzarow}</span>
             </div>
-        </li>
-        <li id="dropdown">
-            <a href="https://mluzarow.github.io/apps/apps.html" id="dropdown_btn">
-                Apps
-            </a>
-            <div id="dropdown_content">
-                <a href="https://mluzarow.github.io/WebGraphingCalc">
-                    Graphing Calculator
-                </a>
-                <a href="https://mluzarow.github.io/crash-countdown">
-                    Crash Bandicoot Countdown
-                </a>
-            </div>
-        </li>
-        <li>
-            <a href="https://mluzarow.github.io/about.html">
-                About
-            </a>
-        </li>
+        </a>
         
-    </ul>
+        <ul>
+            <li>
+                <a href="https://mluzarow.github.io/blog/home">
+                    Blog
+                </a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="https://mluzarow.github.io/blog/tutorials">
+                    Tutorials
+                </a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="https://mluzarow.github.io/apps/home">
+                    Apps
+                </a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="I-dont-know-about-this-one">
+                    Snippets
+                </a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="https://mluzarow.github.io/about">
+                    About
+                </a>
+            </li>
+            <li>|</li>
+            <li>
+                <a href="https://mluzarow.github.io/contact">
+                    Contact
+                </a>
+            </li>
+        </ul>
+    </div>
+    
+    <div id="db_spacer_1"></div>
+    <div id="db_spacer_2"></div>
+    <div id="db_spacer_3"></div>
 
     <!-- Calculator Frame -->
     <div id="bg">
