--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </li>
             <li>|</li>
             <li>
-                <a href="https://mluzarow.github.io/blog/tutorials">
+                <a href="https://mluzarow.github.io/blog/home">
                     Tutorials
                 </a>
             </li>
@@ -39,7 +39,7 @@
             </li>
             <li>|</li>
             <li>
-                <a href="I-dont-know-about-this-one">
+                <a href="https://mluzarow.github.io/snippets/test">
                     Snippets
                 </a>
             </li>
