Added tab title
Added a tab title "Web Graphing Calculator".

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script type="text/javascript" src="js/calculator.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
     <script type="text/javascript" src="js/drawing.js"></script>
+    
+    <title>Apps - Web Graphing Calculator</title>
 </head>
 
 <body>
