Fixed error in the sine token
Fixed an error in the tier value of the sine function token; had an
extra character ')'.

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 </button>
 
                 <!-- Sine button -->
-                <button onclick="addCommand (new token ('sin(', 6), sine)" class="btn_base btn_blacks">
+                <button onclick="addCommand (new token ('sin(', 6, sine)" class="btn_base btn_blacks">
                     SIN
                 </button>
 
