--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </li>
             <li>|</li>
             <li>
-                <a href="https://mluzarow.github.io/snippets/test">
+                <a href="https://mluzarow.github.io/snippets/home">
                     Snippets
                 </a>
             </li>
